--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,18 @@
-source-file ~/.config/tmux/tmux.reset.conf
-set-option -g default-terminal 'screen-256color'
-set-option -g terminal-overrides ',xterm-256color:RGB'
+# source-file ~/.config/tmux/tmux.reset.conf
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'fcsonline/tmux-thumbs'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'wfxr/tmux-fzf-url'
+# set -g @plugin 'omerxx/tmux-sessionx'
+# set -g @plugin 'omerxx/tmux-floax'
+set -g @plugin 'catppuccin/tmux'
 
-set -g prefix ^A
+set -g @continuum-restore 'on'
+set -g @catppuccin_flavor 'mocha' # latte,frappe, macchiato or mocha
+
 set -g base-index 1              # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off     # don't exit from tmux when closing a session
 set -g escape-time 0             # zero-out escape time delay
@@ -15,29 +25,15 @@ setw -g mode-keys vi
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
 
-set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
-set -g @fzf-url-history-limit '2000'
-
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'fcsonline/tmux-thumbs'
-set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin 'wfxr/tmux-fzf-url'
-set -g @plugin 'omerxx/catppuccin-tmux' # My fork that holds the meetings script bc I'm lazy af
-set -g @plugin 'omerxx/tmux-sessionx'
-set -g @plugin 'omerxx/tmux-floax'
-set -g @floax-width '80%'
-set -g @floax-height '80%'
-set -g @floax-border-color 'magenta'
-set -g @floax-text-color 'blue'
-set -g @floax-bind 'p'
-set -g @floax-change-path 'true'
+# set -g @floax-width '80%'
+# set -g @floax-height '80%'
+# set -g @floax-border-color 'magenta'
+# set -g @floax-text-color 'blue'
+# set -g @floax-bind 'p'
+# set -g @floax-change-path 'true'
 set -g @sessionx-bind-zo-new-window 'ctrl-y'
 set -g @sessionx-auto-accept 'off'
-set -g @sessionx-custom-paths '/Users/omerxx/dotfiles'
+set -g @sessionx-custom-paths '/Users/awnj/dotfiles'
 set -g @sessionx-bind 'o'
 set -g @sessionx-x-path '~/dotfiles'
 set -g @sessionx-window-height '85%'
@@ -66,4 +62,20 @@ set -g @catppuccin_directory_text "#{b:pane_current_path}"
 set -g @catppuccin_meetings_text "#($HOME/.config/tmux/scripts/cal.sh)"
 set -g @catppuccin_date_time_text "%H:%M"
 
-run '~/.tmux/plugins/tpm/tpm'
+set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
+set -g @fzf-url-history-limit '2000'
+
+setw -g mode-keys vi
+
+# Navigate panes with Vim keys
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind _ split-window -v -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
+bind Down resize-pane -D 7
+bind Up resize-pane -U 7
+
+run -b '~/.tmux/plugins/tpm/tpm'
