--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,28 +7,20 @@ set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-cpu'
-# set -g @plugin 'omerxx/tmux-sessionx'
-# set -g @plugin 'omerxx/tmux-floax'
-# set -g @plugin 'catppuccin/tmux'
 
+set -g default-terminal "tmux-256color"
 set -g @continuum-restore 'on'
 set -g @catppuccin_flavor 'mocha' # latte,frappe, macchiato or mocha
-set -g @catppuccin_window_status_style 'basic'
+set -g @catppuccin_window_status_style 'basic' # basic, rounded
+set -g @catppuccin_window_default_text " #{window_name}"
+set -g @catppuccin_window_current_text " #W"
+set -g @catppuccin_window_text " #W" # use #T for pane title, #W for window name
 
-run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 set -g status-right-length 100
 set -g status-left-length 100
 set -g status-right "#{E:@catppuccin_status_session} #{E:@catppuccin_status_application}  #{E:@catppuccin_status_date_time}"
-set -agF status-right "#{E:@catppuccin_status_cpu}"
 set -g status-left ""
-set -agF status-right "#{E:@catppuccin_status_battery}"
 set -ogq @catppuccin_status_connect_separator "yes"
-# set -g status-left "#{E:@catppuccin_status_application}"
-# set -agF status-right "#{E:@catppuccin_status_cpu}"
-# set -ag status-right "#{E:@catppuccin_status_session}"
-# set -ag status-right "#{E:@catppuccin_status_uptime}"
-# set -agF status-right "#{E:@catppuccin_status_battery}"
-
 
 set -g base-index 1              # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off     # don't exit from tmux when closing a session
@@ -42,41 +34,8 @@ setw -g mode-keys vi
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
 
-# set -g @floax-width '80%'
-# set -g @floax-height '80%'
-# set -g @floax-border-color 'magenta'
-# set -g @floax-text-color 'blue'
-# set -g @floax-bind 'p'
-# set -g @floax-change-path 'true'
-# set -g @sessionx-bind-zo-new-window 'ctrl-y'
-# set -g @sessionx-auto-accept 'off'
-# set -g @sessionx-custom-paths '/Users/awnj/dotfiles'
-# set -g @sessionx-bind 'o'
-# set -g @sessionx-x-path '~/dotfiles'
-# set -g @sessionx-window-height '85%'
-# set -g @sessionx-window-width '75%'
-# set -g @sessionx-zoxide-mode 'on'
-# set -g @sessionx-custom-paths-subdirectories 'false'
-# set -g @sessionx-filter-current 'false'
-set -g @continuum-restore 'on'
-set -g @resurrect-strategy-nvim 'session'
-# set -g @catppuccin_window_left_separator ""
-# set -g @catppuccin_window_right_separator " "
-set -ogq @catppuccin_window_middle_separator " █"
-# set -g @catppuccin_window_number_position "right"
-# set -g @catppuccin_window_default_fill "number"
-# set -g @catppuccin_window_default_text "#W"
-# set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
-# set -g @catppuccin_status_modules_right "directory date_time"
-# set -g @catppuccin_status_modules_left "session"
-# set -g @catppuccin_status_left_separator  " "
-# set -g @catppuccin_status_right_separator " "
-# set -g @catppuccin_status_right_separator_inverse "no"
-# set -g @catppuccin_status_fill "icon"
-# set -g @catppuccin_status_connect_separator "no"
-# set -g @catppuccin_directory_text "#{b:pane_current_path}"
-# set -g @catppuccin_meetings_text "#($HOME/.config/tmux/scripts/cal.sh)"
+set -g @catppuccin_window_flags "icon"
+# set -g @catppuccin_window_current_text " #W#{?window_zoomed_flag,(),}"
 set -g @catppuccin_date_time_text " %y-%m-%d %H:%M"
 
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
@@ -97,3 +56,9 @@ bind Up resize-pane -U 7
 
 set -g @plugin 'tmux-plugins/tpm'
 run -b '~/.tmux/plugins/tpm/tpm'
+
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+set -g allow-rename off
+
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
