--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,8 +7,11 @@ set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g default-terminal "tmux-256color"
+set -g prefix C-s
+
 set -g @continuum-restore 'on'
 set -g @catppuccin_flavor 'mocha' # latte,frappe, macchiato or mocha
 set -g @catppuccin_window_status_style 'basic' # basic, rounded
