--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,6 +8,9 @@ set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'fsconline/tmux-thumbs'
+set -g @thumbs-command 'echo {} | pbcopy'
+run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
 
 set -g default-terminal "tmux-256color"
 set -g prefix C-s
