--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,6 +9,7 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'fsconline/tmux-thumbs'
+set -g @plugin 'catppuccin/tmux'
 set -g @thumbs-command 'echo {} | pbcopy'
 run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
 
