--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,7 +16,7 @@ run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
 set -g default-terminal "tmux-256color"
 set -g prefix C-s
 
-set -g @continuum-restore 'on'
+# set -g @continuum-restore 'on'
 set -g @catppuccin_flavor 'mocha' # latte,frappe, macchiato or mocha
 set -g @catppuccin_window_status_style 'basic' # basic, rounded
 set -g @catppuccin_window_default_text " #{window_name}"
@@ -60,6 +60,8 @@ bind _ split-window -v -c "#{pane_current_path}"
 bind | split-window -h -c "#{pane_current_path}"
 bind Down resize-pane -D 7
 bind Up resize-pane -U 7
+bind Left resize-pane -L 7
+bind Right resize-pane -R 7
 
 set -g @plugin 'tmux-plugins/tpm'
 run -b '~/.tmux/plugins/tpm/tpm'
@@ -69,3 +71,4 @@ set -g allow-rename off
 
 set -agF status-right "#{E:@catppuccin_status_cpu}"
 set -agF status-right "#{E:@catppuccin_status_battery}"
+
