refactor: streamline nvim config and remove AI plugins
- Remove Avante AI and Copilot Chat plugins
- Add MCP Hub plugin for Claude integration
- Update none-ls configuration for better linting
- Remove redundant nvim-lspconfig setup
- Update Ghostty config and shell profiles
- Refresh lazy-lock with current plugin versions

--- a/ghostty/config
+++ b/ghostty/config
@@ -5,3 +5,4 @@ shell-integration-features = no-cursor
 
 keybind = global:cmd+grave_accent=toggle_quick_terminal
 
+keybind = shift+enter=text:\x1b\r
